# CellularLab

./: .gitignore  LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/iperf/: iperf_client_api.c  iperf_fd_safe.h  iperf_jni.c  iperf_server_api.c  net.c
app/src/main/cpp/iperf/iperf-3.19/: cjson.c  cjson.h  flowlabel.h  iperf.h  iperf_api.c  iperf_api.h  iperf_auth.c  iperf_auth.h  iperf_client_api.c  iperf_pthread.c  iperf_pthread.h  iperf_sctp.c  iperf_server_api.c  iperf_tcp.c  iperf_udp.c  iperf_util.c  net.c  net.h  portable_endian.h  t_auth.c  tcp_info.c
app/src/main/res/drawable/: colors_checkbox.xml  edittext_bg.xml  edittext_rounded_bg.xml  ic_ai.xml  ic_delete.xml  ic_info.xml  ic_more_vert.xml  ic_open.xml  ic_share_result.xml  popup_background.xml  rounded_button.xml  rounded_button_dark.xml  version_badge_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_markdown_viewer.xml  dialog_api_key_input.xml  dialog_reduce_bandwidth.xml  dialog_social_links.xml  fragment_command_line.xml  fragment_result_history.xml  fragment_run_test.xml  fragment_saved_profiles.xml  item_log_entry.xml
app/src/main/res/menu/: bottom_nav_menu.xml  history_item_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
docs/: updating-iperf.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+14 files in other folders)
